# threadkit

./: .gitignore  pyproject.toml
src/threadkit/: Thread.py  __init__.py
tests/: Thread.py
