[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "threadkit"
version = "0.1.0"
description = "Lightweight threading utility for parallel execution"
authors = [{ name = "your-name" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]